# talculate

./: .gitignore  CHANGELOG.md  Makefile  README.md  TODO.md  flake.nix  package.nix  pyproject.toml  readme.md  requirements.txt  talc.py  treefmt.toml
.github/workflows/: build-binary.yaml  changelog.yaml  changelog.yml  publish-release.yaml  publish-release.yml  treefmt.yaml
example_config/: config.yaml  theme.yaml
package/nix/: package.nix
src/: main.py  paths.py  user_config.py
src/talculate/: main.py  paths.py  user_config.py
