[project]
name = "talculate"
version = "0.1.0"
description = "A programmer oriented tui calculator. simple keys. minimal ui"
readme = "README.md"
requires-python = ">=3.12,<4.0.0"
authors = [
  { name = "nooneknows", email = "157999171+nooneknowspeter@users.noreply.github.com" },
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
